# ppo-mario

./: .gitignore  .gitmodules  README.md  SUBMISSION_SPEC.md  agent.py  env.py  main.py  model.py  playback.py  player.py  ppo.py  pyproject.toml  reference-agent.py  train.py  video.py
mario_rl/: __init__.py  actions.py  config.py  env.py  interface.py
