[project]
name = "rnd-mario"
version = "0.1.0"
description = "Super Mario RL Agent"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gym-super-mario-bros>=7.4.0",
    "gymnasium>=0.29",
    "imageio>=2.31",
    "nes-py>=8.2.1",
    "numpy>=1.24,<2.0",
    "opencv-python>=4.8",
    "torch>=2.0",
]

[project.optional-dependencies]
train = [
    "av>=17.0.1",
    "rich>=15.0.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
]

[tool.ruff]
line-length = 120
ignore = ["F722"]

[tool.pyright]
typeCheckingMode = "basic"
reportPrivateImportUsage = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
